## Process this file with automake to produce Makefile.in
## Copyright (c) 1999-2011 Philip Kendall

## $Id: Makefile.am 4850 2013-01-05 12:10:23Z fredm $

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License along
## with this program; if not, write to the Free Software Foundation, Inc.,
## 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
##
## Author contact information:
##
## E-mail: philip-fuse@shadowmagic.org.uk

AUTOMAKE_OPTIONS = foreign

ROMS =  128-0.rom 128-1.rom \
	48.rom \
	disciple.rom \
	plus2-0.rom plus2-1.rom \
	plus3-0.rom plus3-1.rom plus3-2.rom plus3-3.rom \
	plus3e-0.rom plus3e-1.rom plus3e-2.rom plus3e-3.rom \
	plusd.rom \
	tc2048.rom \
	tc2068-0.rom tc2068-1.rom \
	se-0.rom se-1.rom \
        speccyboot-1.4.rom

pkgdata_DATA = $(ROMS)

EXTRA_DIST = $(ROMS) README.copyright
